--- a/vkcrb/account/Templates/base.html
+++ b/vkcrb/account/Templates/base.html
@@ -73,10 +73,12 @@
     <div  class="container">
     <div  class="row justify-content-center">
       <div  class="col-4">
+
       {% block content %}
       {% endblock %}
       </div>
     </div>
+    <p class="mt-5 mb-3 text-muted text-center fixed-bottom">© 2021 Umovist Maxim</p>
   </div>
 <script
 src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
