--- a/vkcrb/blog/templates/blog/post/detail.html
+++ b/vkcrb/blog/templates/blog/post/detail.html
@@ -86,7 +86,7 @@
 {% else %}
 <h2>Добавить новый комментарий</h2>
 <form action="." method="post">
-{{ comment_form.as_p }}
+{{ comment_form.as_p }}<br>
 {% csrf_token %}
 <p><input type="submit" value="Добавить комментарий"></p>
 </form>
