--- a/vkcrb/account/Templates/base.html
+++ b/vkcrb/account/Templates/base.html
@@ -1,91 +1,109 @@
- {% load static %}
 <!doctype html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}{% endblock %}</title>
-    <!--<link rel="stylesheet" href="{% static 'css/base.css' %}">-->
-    <link rel="shortcut icon" href="../image/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link  rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"  crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
-</head>
-<body>
+  <head>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url "dashboard" %}">В КЦРБ</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    {% if request.user.is_authenticated %}
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url "dashboard" %}">Главная страница</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../../blog">Блог</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url "user_list" %}">Люди</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Меню</a>
-          <ul class="dropdown-menu" aria-labelledby="dropdown01">
-            <li><a class="dropdown-item" href="{% url "password_change" %}">Сменить пароль</a></li>
-            <li><a class="dropdown-item" href="{% url "edit" %}"">Редактировать профиль</a></li>
-            <li><a class="dropdown-item" href="../../blog">Перейти в блог</a></li>
-          </ul>
-        </li>
-      </ul>
-        {% endif %}
-      <form class="d-flex">
-        <button class="btn btn-outline-success" type="submit">
-        <span class="user">
-            {% if request.user.is_authenticated %}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Itim&family=Metal+Mania&display=swap&family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <script src="https://kit.fontawesome.com/120b98d6e2.js" crossorigin="anonymous"></script>
+
+    <title>{% block title %} {% endblock title %}</title>
+  </head>
+
+  <style>
+  h3{
+  font-family: 'Open Sans','Cairo', 'Dancing Script', cursive;
+  }
+  body {
+    background: white;
+  }
+  .navbar {
+
+    border-radius:10px;
+
+  }
+  a{
+    font-family: 'Open Sans','Cairo','Kaushan Script', cursive;
+    font-size: large;
+  }
+  </style>
+
+<div class="container navigation">
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item  {% block homeactive %}{% endblock homeactive %}">
+            <a  class="nav-link btn" href="{% url "dashboard" %}">Главная <span class="sr-only">(current)</span></a>
+          </li>
+            <li class="nav-item {% block contactactive %}{% endblock contactactive %}">
+              <a class="nav-link" href="../../blog">Блог</a>
+          </li>
+
+        </ul>
+    </div>
+    <div class="mx-auto order-0">
+        <a class="navbar-brand mx-auto" href="{% url "dashboard" %}"><a href="{% url 'dashboard' %}"><img src="https://i.ibb.co/mz3RZsG/logoza-ru.png" alt="VKCRB" style="width:100%; border-radius: 100px;"></a></a>
+    </div>
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <ul class="navbar-nav ml-auto">
+            {% if user.is_authenticated %}
+          <li class="nav-item {% block profileactive %}  ml-auto  {% endblock profileactive %}">
+              <a class="nav-link" href="{% url "edit" %}">Профиль</a>
+          </li>
                 Привет {{ request.user.first_name }},
-                <a href="{% url "logout" %}">Выйти</a>
-            {% else %}
-                <a href="{% url "register" %}">Регистрация</a>
-                <a href="{% url "login" %}">Войти</a>
-            {% endif %}
-        </span></button>
-      </form>
-    </div>
-  </div>
-</nav>
-{% if messages %}
-<ul class="messages">
-{% for message in messages %}
-<li class="{{ message.tags }}">
-{{ message|safe }}
-<a href="#" class="close">x</a>
-</li>
-{% endfor %}
-</ul>
-{% endif %}
-    <div  class="container">
-    <div  class="row justify-content-center">
-      <div  class="col-4">
+          <li class="nav-item {% block logoutactive %}{% endblock logoutactive %}">
 
-      {% block content %}
-      {% endblock %}
-      </div>
-    </div>
-    <p class="mt-5 mb-3 text-muted text-center fixed-bottom">© 2021 Umovist Maxim</p>
+              <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
+          </li>
+            {% else %}
+          <li class="nav-item {% block registeractive %}{% endblock registeractive %}">
+              <a class="nav-link" href="{% url 'register' %}">Регистрация</a>
+          </li>
+          <li class="nav-item {% block loginactive %}{% endblock loginactive %}">
+              <a class="nav-link" href="{% url 'login' %}">Войти</a>
+          </li>
+          {% endif %}
+        </ul>
+      </nav>
   </div>
-<script
-src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-{% block domready %}{% endblock %}
-});
-</script>
-</body>
+
+
+
+
+    {% block content %}
+
+    {% endblock content %}
+
+
+
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5ee8ce99aabd2702"></script>
+
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+  <script>
+    var csrftoken = Cookies.get('csrftoken');
+    function csrfSafeMethod(method) {
+      // these HTTP methods do not require CSRF protection
+      return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    }
+    $.ajaxSetup({
+      beforeSend: function(xhr, settings) {
+        if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+          xhr.setRequestHeader("X-CSRFToken", csrftoken);
+        }
+      }
+    });
+    $(document).ready(function(){
+      {% block domready %}
+      {% endblock %}
+       });
+  </script>
+
 </html>
