--- a/vkcrb/account/Templates/base.html
+++ b/vkcrb/account/Templates/base.html
@@ -2,90 +2,130 @@
 <!doctype html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
-    <!--<link rel="stylesheet" href="{% static 'css/base.css' %}">-->
-    <link rel="shortcut icon" href="../image/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <link  rel="stylesheet"  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"  crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&family=Roboto:wght@400;500&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/slick.css' %}">
+    <link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
+
 <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url "dashboard" %}">В КЦРБ</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    {% if request.user.is_authenticated %}
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url "dashboard" %}">Главная страница</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../../blog">Блог</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url "user_list" %}">Люди</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Меню</a>
-          <ul class="dropdown-menu" aria-labelledby="dropdown01">
-            <li><a class="dropdown-item" href="{% url "password_change" %}">Сменить пароль</a></li>
-            <li><a class="dropdown-item" href="{% url "edit" %}"">Редактировать профиль</a></li>
-            <li><a class="dropdown-item" href="../../blog">Перейти в блог</a></li>
-          </ul>
-        </li>
-      </ul>
-        {% endif %}
-      <form class="d-flex">
-        <button class="btn btn-outline-success" type="submit">
-        <span class="user">
-            {% if request.user.is_authenticated %}
-                Привет {{ request.user.first_name }},
-                <a href="{% url "logout" %}">Выйти</a>
-            {% else %}
-                <a href="{% url "register" %}">Регистрация</a>
-                <a href="{% url "login" %}">Войти</a>
-            {% endif %}
-        </span></button>
-      </form>
-    </div>
-  </div>
-</nav>
-{% if messages %}
-<ul class="messages">
-{% for message in messages %}
-<li class="{{ message.tags }}">
-{{ message|safe }}
-<a href="#" class="close">x</a>
-</li>
-{% endfor %}
-</ul>
-{% endif %}
-    <div  class="container">
-    <div  class="row justify-content-center">
-      <div  class="col-4">
+<section class="top">
+    <div class="container">
 
-      {% block content %}
-      {% endblock %}
+      <img class="logo animate__animated animate__fadeInLeftBig" src="{% static 'images/logo.svg' %}" alt="logo">
+
+      <div class="dashboard__content">
+
+        <div class="dashboard__slider animate__animated animate__fadeInLeftBig animate__delay-1s">
+          <div class="dashboard__slider-wrapper">
+
+            <div class="slider__wrapper-inner">
+              <img class="dashboard__slider-img" src="{% static 'images/content/content-1.jpg' %}" alt="hello">
+              <div class="dashboard__slider-content">
+                <h3 class="dashboard__slider-title">Добро пожаловать !</h3>
+                <p class="dashboard__slider-text">
+                  Добро пожаловать на главную страницу соц.сети Кызылжаркой РБ .Lorem ipsum dolor sit amet, consectetur
+                  adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit.
+                  Sagittis
+                  porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id.
+                  Diam
+                  sit sed volutpat massa. Egestas ornare vel volutpat.
+                </p>
+                <div class="dashboard__slider-bottom">
+                  <div class="dashboard__slider-date">21.06.2020</div>
+                  <a class="dashboard__slider-btn" href="#">Подробнее...</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="slider__wrapper-inner">
+              <img class="dashboard__slider-img" src="{% static 'images/content/content-1.jpg' %}" alt="">
+              <div class="dashboard__slider-content">
+                <h3 class="dashboard__slider-title">Добро пожаловать !</h3>
+                <p class="dashboard__slider-text">
+                  Добро пожаловать на главную страницу соц.сети Кызылжаркой РБ .Lorem ipsum dolor sit amet, consectetur
+                  adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit.
+                  Sagittis
+                  porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id.
+                  Diam
+                  sit sed volutpat massa. Egestas ornare vel volutpat.
+                </p>
+                <div class="dashboard__slider-bottom">
+                  <div class="dashboard__slider-date">21.06.2020</div>
+                  <a class="dashboard__slider-btn" href="#">Подробнее...</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="slider__wrapper-inner">
+              <img class="dashboard__slider-img" src="{% static 'images/content/content-1.jpg' %}" alt="">
+              <div class="dashboard__slider-content">
+                <h3 class="dashboard__slider-title">Добро пожаловать !</h3>
+                <p class="dashboard__slider-text">
+                  Добро пожаловать на главную страницу соц.сети Кызылжаркой РБ .Lorem ipsum dolor sit amet, consectetur
+                  adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit.
+                  Sagittis
+                  porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id.
+                  Diam
+                  sit sed volutpat massa. Egestas ornare vel volutpat.
+                </p>
+                <div class="dashboard__slider-bottom">
+                  <div class="dashboard__slider-date">21.06.2020</div>
+                  <a class="dashboard__slider-btn" href="#">Подробнее...</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="dashboard__userboard animate__animated  animate__fadeInRightBig animate__delay-1s">
+          <div class="dashboard__userboard-wrapper">
+            <h4 class="dashboard__userboard-name">Привет <span>Максим!</span></h4>
+            <img class="dashboard__userboard-photo" src="{% static 'images/user.png' %}" alt="avatar">
+
+            <ul class="userboard__list">
+              <li class="userboard__list-blog">
+                <a class="userboard__list-link list-blog" href="../../blog">Блог</a>
+              </li>
+              <li class="userboard__list-people">
+                <a class="userboard__list-link list-people" href="{% url "user_list" %}">Люди</a>
+              </li>
+
+              <li class="dropdown">
+                <p class="userboard__list-link userboard__list-title">
+                  Меню</p>
+                <div class="userboard__list-content">
+                  <a class="userboard__list-content-link" href="#">Сменить пароль</a>
+                  <a class="userboard__list-content-link" href="#">Редактировать профиль</a>
+                </div>
+              </li>
+
+
+            </ul>
+            <a class="userboard__list-link userboard__exit-btn" href="#">Выход</a>
+            <a class="politic" href="#">Политика конфиденциальности</a>
+            <div class="autor">©2021 Umovist Maxim</div>
+          </div>
+        </div>
       </div>
     </div>
-    <p class="mt-5 mb-3 text-muted text-center fixed-bottom">© 2021 Umovist Maxim</p>
-  </div>
-<script
-src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-{% block domready %}{% endblock %}
-});
-</script>
+  </section>
+
+
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="{% static 'js/slick.min.js' %}"></script>
+  <script src="{% static 'js/main.js' %} "></script>
+
 </body>
 </html>
