--- a/vkcrb/account/Templates/account/dashboard.html
+++ b/vkcrb/account/Templates/account/dashboard.html
@@ -1,13 +1,9 @@
 {% extends "base.html" %}
-
+ {% load static %}
 {% block title %}В КЦРБ{% endblock %}
 
 {% block content %}
 
-<section class="top">
-    <div class="container">
-
-      <img class="logo animate__animated animate__fadeInLeftBig" src="{% static 'images/logo.svg' %}" alt="logo">
 
       <div class="dashboard__content">
 
@@ -15,57 +11,55 @@
           <div class="dashboard__slider-wrapper">
 
             <div class="slider__wrapper-inner">
-              <img class="dashboard__slider-img" src="{% static 'images/content/content-1.jpg' %}" alt="hello">
+              <img class="dashboard__slider-img" src="{% static 'images/content/content-1.jpg' %}" alt="">
               <div class="dashboard__slider-content">
                 <h3 class="dashboard__slider-title">Добро пожаловать !</h3>
                 <p class="dashboard__slider-text">
-                  Добро пожаловать на главную страницу соц.сети Кызылжаркой РБ .Lorem ipsum dolor sit amet, consectetur
-                  adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit.
-                  Sagittis
-                  porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id.
-                  Diam
-                  sit sed volutpat massa. Egestas ornare vel volutpat.
+                  Добро пожаловать на главную страницу соц.сети Кызылжаркой РБ . Данный проект разработан
+                    в рамках производственной практики 3. Upgrade проекта произошел в рамках производственной
+                    практики 4 (преддипломная).
                 </p>
                 <div class="dashboard__slider-bottom">
-                  <div class="dashboard__slider-date">21.06.2020</div>
+                  <div class="dashboard__slider-date">22.04.2021</div>
                   <a class="dashboard__slider-btn" href="#">Подробнее...</a>
                 </div>
               </div>
             </div>
 
             <div class="slider__wrapper-inner">
-              <img class="dashboard__slider-img" src="{% static 'images/content/content-1.jpg' %}" alt="">
+              <img class="dashboard__slider-img" src="{% static 'images/content/content-2.jpg' %}" alt="">
               <div class="dashboard__slider-content">
-                <h3 class="dashboard__slider-title">Добро пожаловать !</h3>
+                <h3 class="dashboard__slider-title">В СКО завели уголовное дело из-за смерти двух пациенток с
+                    Covid-19 после их транспортировки</h3>
                 <p class="dashboard__slider-text">
-                  Добро пожаловать на главную страницу соц.сети Кызылжаркой РБ .Lorem ipsum dolor sit amet, consectetur
-                  adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit.
-                  Sagittis
-                  porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id.
-                  Diam
-                  sit sed volutpat massa. Egestas ornare vel volutpat.
+                  Прокуратура выявила нарушения в действиях сотрудников районной больницы. Главврач медучреждения
+                    уверяет, что лишь выполнял требования облздрава.
+                В Петропавловске из-за смерти двух пациенток с коронавирусом после их транспортировки из районной
+                    больницы в городскую возбудили уголовное дело, передаёт Sputnik Казахстан.
+                    В феврале в Кызылжарской центральной районной больнице закрыли ковидный стационар из-за
+                    снижения уровня заболеваемости, больных перевезли в госпитали Петропавловска.
+                    Всех пациентов транспортировали в течение суток. После этого умерли две женщины с Covid-19.
                 </p>
                 <div class="dashboard__slider-bottom">
-                  <div class="dashboard__slider-date">21.06.2020</div>
+                  <div class="dashboard__slider-date">22.04.2021</div>
                   <a class="dashboard__slider-btn" href="#">Подробнее...</a>
                 </div>
               </div>
             </div>
 
             <div class="slider__wrapper-inner">
-              <img class="dashboard__slider-img" src="{% static 'images/content/content-1.jpg' %}" alt="">
+              <img class="dashboard__slider-img" src="{% static 'images/content/content-3.jpg' %}" alt="">
               <div class="dashboard__slider-content">
-                <h3 class="dashboard__slider-title">Добро пожаловать !</h3>
+                <h3 class="dashboard__slider-title">В Казахстане отменили предельные цены на медицинские маски</h3>
                 <p class="dashboard__slider-text">
-                  Добро пожаловать на главную страницу соц.сети Кызылжаркой РБ .Lorem ipsum dolor sit amet, consectetur
-                  adipiscing elit. Elementum volutpat orci turpis urna. Et vestibulum, posuere tortor lacinia sit.
-                  Sagittis
-                  porttitor orci auctor in at tincidunt arcu egestas. Fusce arcu sodales lacinia eu auctor nunc nam id.
-                  Diam
-                  sit sed volutpat massa. Egestas ornare vel volutpat.
+                  В октябре прошлого года сообщалось о том, что предельные цены на маски снижены:
+                    Межведомственная комиссия определила предельную розничную цену на защитные маски в размере 40 тенге,
+                    на одноразовые медицинские маски — 60 тенге. А в ноябре 2020-го министр здравоохранения предупредил,
+                    что предельные цены на медицинские маски отменят, так как ситуация с их наличием на
+                    рынке стабилизировалась, в регулировании цены больше нет необходимости.
                 </p>
                 <div class="dashboard__slider-bottom">
-                  <div class="dashboard__slider-date">21.06.2020</div>
+                  <div class="dashboard__slider-date">22.04.2021</div>
                   <a class="dashboard__slider-btn" href="#">Подробнее...</a>
                 </div>
               </div>
@@ -73,10 +67,9 @@
           </div>
         </div>
 
-
         <div class="dashboard__userboard animate__animated  animate__fadeInRightBig animate__delay-1s">
           <div class="dashboard__userboard-wrapper">
-            <h4 class="dashboard__userboard-name">Привет <span>Максим!</span></h4>
+            <h4 class="dashboard__userboard-name">Привет <span>{{ request.user.first_name }}</span></h4>
             <img class="dashboard__userboard-photo" src="{% static 'images/user.png' %}" alt="avatar">
 
             <ul class="userboard__list">
@@ -91,29 +84,19 @@
                 <p class="userboard__list-link userboard__list-title">
                   Меню</p>
                 <div class="userboard__list-content">
-                  <a class="userboard__list-content-link" href="#">Сменить пароль</a>
-                  <a class="userboard__list-content-link" href="#">Редактировать профиль</a>
+                  <a class="userboard__list-content-link" href="{% url "password_change" %}">Сменить пароль</a>
+                  <a class="userboard__list-content-link" href="{% url "edit" %}">Редактировать профиль</a>
                 </div>
               </li>
 
 
             </ul>
-            <a class="userboard__list-link userboard__exit-btn" href="#">Выход</a>
+            <a class="userboard__list-link userboard__exit-btn" href="{% url "logout" %}">Выход</a>
             <a class="politic" href="#">Политика конфиденциальности</a>
             <div class="autor">©2021 Umovist Maxim</div>
           </div>
         </div>
       </div>
-        {% with total_images_created=request.user.images_created.count %}
-<p>Вы добавили в закладки
-{{total_images_created }} изображения{{ total_images_created|pluralize }}.</p>
-{% endwith %}
-<p>Для того,чтобы воспользоваться букмарклетом перетащите его в закладки-> откройте на любом сайте и оцените результат
-<a href="javascript:{% include "bookmarklet_launcher.js" %}" class="button">
-Bookmark it</a>
-<p>
     </div>
   </section>
-    
-
 {% endblock %}
