--- a/vkcrb/account/Templates/account/dashboard.html
+++ b/vkcrb/account/Templates/account/dashboard.html
@@ -72,7 +72,7 @@
 
             <ul class="userboard__list">
               <li class="userboard__list-blog">
-                <a class="userboard__list-link list-blog" href="../../blog">Блог</a>
+                <a class="userboard__list-link list-blog" href="{% url "blog:post_list" %}">Блог</a>
               </li>
               <li class="userboard__list-people">
                 <a class="userboard__list-link list-people" href="{% url "user_list" %}">Люди</a>
