--- a/vkcrb/account/Templates/registration/login.html
+++ b/vkcrb/account/Templates/registration/login.html
@@ -1,13 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block title %}Авторизация{% endblock %}
 
 {% block content %}
 
-     <div class="dashboard__content">
-
-          <div class="dashboard__userboard-wrapper">
-                <h4 class="dashboard__userboard-name">Добро пожаловать!</h4>
             <!--    <form method="post">
                 {% csrf_token %}
                 <input type="hidden" name="next" value="{{ next }}">
@@ -15,17 +12,35 @@
                 <button type="submit" class="btn btn-primary btn-block">Войти</button>
                     <p class="text-center"><a href="{% url "social:begin" "google-oauth2" %}">Google</p>
                     <a class="userboard__list-link userboard__exit-btn" href="{% url "password_reset" %}">Забыл пароль</a></p>
-                </form>-->
+                </form>
       <form action="." method="post">
           {% csrf_token %}
             {{ form.as_p }}<br>
     <input class="userboard__list-link userboard__exit-btn" type="submit" value="Войти">
-</form>
+</form>-->
 
+  <section class="login">
+    <div class="container">
+      <div class="login__wrapper">
+        <img class="login__logo" src="{% static 'images/logo-white.svg' %}" alt="logo">
+        <form class="login-form" method="post">
+            {{ form }}
+            <br>
+          <div class="form__btn">
+            <button class="form__btn-entry">Вход</button>
+            <button class="form__btn-register"><a href="{% url 'register' %}">Регистрация</a></button>
           </div>
-
+          <div class="form__btn-bottom">
+            <a class="form__btn-restore" href="{% url "password_reset" %}">восстановить пароль</a>
+            <a class="form__btn-politic" href="#">политика конфиденциальности</a>
+          </div>
+          <p class="authorization__google">авторизация с помощью <a class="auth__google"
+                                                                    href="{% url "social:begin" "google-oauth2" %}">Google</a></p>
+        </>
+      </div>
     </div>
-</div>
-</section>
+  </section>
+
+
 
 {% endblock %}
