--- a/vkcrb/account/Templates/registration/login.html
+++ b/vkcrb/account/Templates/registration/login.html
@@ -24,6 +24,7 @@
       <div class="login__wrapper">
         <img class="login__logo" src="{% static 'images/logo-white.svg' %}" alt="logo">
         <form class="login-form" method="post">
+            {% csrf_token %}
             {{ form }}
             <br>
           <div class="form__btn">
