--- a/vkcrb/account/static/css/style.css
+++ b/vkcrb/account/static/css/style.css
@@ -294,5 +294,131 @@ body{
     right: 0;
 }
 
+.login{
+    display: flex;
+    align-items: center;
+    min-height: 100vh;
+    
+}
+.login__wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 420px;
+    height: 493px;
+    background: #516395;
+    box-shadow: 0px 4px 50px rgba(0, 0, 0, 0.5);
+}
+
+.login__logo{
+    margin: 41px 0 64px;
+}
+
+.login-form{
+    display: flex;
+    flex-direction: column;
+    padding: 0 79px;
+}
+
+.login-form input{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    padding: 6px 143px 6px 25px;
+    border: none;
+    background-color: transparent;
+    border-bottom: 1px solid #fff;
+    color: #fff;
+    
+}
+
+.login__input{
+    margin-bottom: 36px;
+    font-weight: 600;
+}
 
 
+.login__input::placeholder{
+    color: #fff;
+}
+
+.pass__input{
+    margin-bottom: 14px;
+}
+
+.pass__input::placeholder{
+    color: #fff;
+}
+
+.form__btn{
+    display: block;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+}
+
+.form__btn button{
+    width: 150px;
+    padding: 5px;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 16px;
+    cursor: pointer; 
+    border: none;
+    transition: all .5s;
+}
+
+.form__btn-entry{
+    background-color: #202245;
+    color: #fff;
+}
+
+.form__btn-entry:hover{
+    background: rgba(32, 34, 69, 0.5);
+}
+
+.form__btn-register{
+    background: rgba(32, 34, 69, 0.5);
+    color: #fff;
+}
+
+.form__btn-register:hover{
+    background-color: #202245;
+}
+
+.form__btn-bottom{
+    display: flex;
+    justify-content: space-between;
+    font-family: 'Lato', sans-serif;
+    font-style: italic;
+    font-weight: 600;
+    font-size: 9px;
+    line-height: 15px;
+    text-decoration-line: underline;
+    color: #EDEDED;
+    margin-bottom: 20px;
+}
+
+.form__btn-restore{
+    margin-left: 20px;
+}
+
+.authorization__google{
+    text-align: center;
+    font-weight: 300;
+    font-size: 12px;
+    line-height: 14px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+.auth__google{
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 14px;
+    text-decoration-line: underline;
+    color: #FFFFFF;
+}
