Регистрация и редактирование фронт

--- a/vkcrb/account/Templates/account/dashboard.html
+++ b/vkcrb/account/Templates/account/dashboard.html
@@ -9,7 +9,7 @@
           <div class="dashboard__slider-wrapper">
 
             <div class="slider__wrapper-inner">
-              <img class="dashboard__slider-img" src="{% static 'images/content/content-1.jpg' %}" alt="">
+              <img class="dashboard__slider-img" src="{% static 'images/content/content-1.jpg' %}" alt="avatar">
               <div class="dashboard__slider-content">
                 <h3 class="dashboard__slider-title">Добро пожаловать !</h3>
                 <p class="dashboard__slider-text">
