--- a/vkcrb/account/Templates/base.html
+++ b/vkcrb/account/Templates/base.html
@@ -11,6 +11,7 @@
     rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/slick.css' %}">
     <link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/jquery.fancybox.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
@@ -28,6 +29,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="{% static 'js/slick.min.js' %}"></script>
+  <script src="{% static 'css/jquery.fancybox.min.css' %}"></script>
   <script src="{% static 'js/main.js' %} "></script>
 
 </body>
