--- a/vkcrb/account/Templates/account/register.html
+++ b/vkcrb/account/Templates/account/register.html
@@ -1,19 +1,23 @@
 {% extends "base.html" %}
-
+ {% load static %}
 {% load crispy_forms_tags %}
 {% block title %}Регистрация{% endblock %}
 {% block content %}
-<div class="card">
-            <div class="card-body">
-     <h4 class="card-title">Регистрация</h4>
-        <p class="text-center">Пожалуйста, зарегистрируйтесь, используя следующую форму:</p>
-        <form action="." method="post">
-{{ user_form.as_p }}
-{% csrf_token %}
-            <p class="text-center">
-                <button type="submit" class="btn btn-primary btn-block">Зарегистрировать</button>
-            </p>
-</form>
+    <section class="registration">
+        <div class="container">
+            <div class="registration__wrapper">
+                <div class="registranion__form">
+                    <h5 class="registranion__form-title">Регистрация</h5>
+                    <form method="post">
+                        <h3 class="registranion__form-subtitle">Пожалуйста, зарегистрируйтесь, используя следующую
+                            форму:</h3>
+                        {{ user_form }}
+                        {% csrf_token %}
+                        <button class="registration__btn">Зарегистрировать</button>
+                    </form>
+                </div>
+                <img src="{% static 'images/registation.jpg' %}" alt="registation.jpg">
             </div>
-</div>
+        </div>
+    </section>
 {% endblock %}
