--- a/vkcrb/account/Templates/registration/password_reset_form.html
+++ b/vkcrb/account/Templates/registration/password_reset_form.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div  class="card">
+<!--<div  class="card">
     <div  class="card-body">
         <h4  class="card-title">Я забыл свой пароль</h4>
          <form  method="post">
@@ -13,5 +13,16 @@
             <button  type="submit"  class="btn btn-primary btn-block">Сбросить</button>
          </form>
     </div>
-</div>
+</div>-->
+
+      <div id="restore__form">
+    <h5 class="restore__form-title">Восстановление пароля</h5>
+    <form>
+      <input class="restore__form-input"  type="text" placeholder="Адресс электронной почты">
+      <p class="restore__form-info">
+        <span>*</span>Если вы забыли имя пользователя или пароль или не можете получить доступ к аккаунту
+      </p>
+      <button class="support__form-btn" type="submit">Сбросить</button>
+    </form>
+  </div>
 {% endblock %}
