--- a/vkcrb/account/Templates/base.html
+++ b/vkcrb/account/Templates/base.html
@@ -29,7 +29,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="{% static 'js/slick.min.js' %}"></script>
-  <script src="{% static 'css/jquery.fancybox.min.css' %}"></script>
+  <script src="{% static 'js/jquery.fancybox.min.js' %}"></script>
   <script src="{% static 'js/main.js' %} "></script>
 
 </body>
